tests/fixtures/invalid/errors/struct_field_dim_mismatch.gcl
// error: field dim mismatch in struct construction
dim Velocity = Length / Time;

type Pair {
    a: Length,
    b: Velocity,
}

node bad: Pair = Pair { a: 1.0 kg, b: 100.0 m/s};
